moved java10 and java11 profiles to root-parent-pom