@@ -20,7 +20,7 @@
     <parent>
         <groupId>net.openhft</groupId>
         <artifactId>java-parent-pom</artifactId>
-        <version>1.1.16</version>
+        <version>1.1.17</version>
         <relativePath />
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -220,24 +220,6 @@
 
     <profiles>
         <profile>
-            <id>java10</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.21.0</version>
-                        <configuration>
-                            <jvm>${JAVA_10_HOME}/bin/java</jvm>
-                            <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
-                                java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>java11</id>
             <build>
                 <plugins>
@@ -270,17 +252,6 @@
                                 <exclude>**/jdk8/**</exclude>
                                 <exclude>**/META-INF/services/**</exclude>
                             </excludes>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.21.0</version>
-                        <configuration>
-                            <jvm>${JAVA_11_HOME}/bin/java</jvm>
-                            <argLine>--add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
-                                java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED
-                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
